# backend/src/routes/api.routes.js
@@ -15,6 +15,7 @@ const bannerRoutes = require('./banner.routes');
 const categoryRoutes = require('./category.routes');
 const chainRoutes = require('./chain.routes');
 const cinemaRoutes = require('./cinema.routes');
+const cinemaProductRoutes = require('./cinemaproduct.routes');
 const pricingRoutes = require('./pricing.routes');
 const productRoutes = require('./product.routes');
 const screenRoutes = require('./screen.routes');
@@ -44,6 +45,7 @@ router.use('/cinemas', cinemaRoutes);
 router.use('/screens', screenRoutes);
 router.use('/categories', categoryRoutes);
 router.use('/products', productRoutes);
+router.use('/cinema-products', cinemaProductRoutes);
 router.use('/product-availability-hours', availabilityRoutes);
 router.use('/product-pricing', pricingRoutes);
 router.use('/banners', bannerRoutes);
